feat(token): update colors values

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/button/button.component.scss
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/button/button.component.scss
@@ -1,7 +1,7 @@
 @use '@design-system-rte/core/design-tokens/main.scss' as *;
 
 :host {
-    
+
     display: inline-flex;
     flex-shrink: 0;
     align-items: center;
@@ -121,7 +121,7 @@
         }
 
         &:active {
-            color: var(--content-brand-press);
+            color: var(--content-brand-pressed);
         }
 
         &:disabled {
