--- a/packages/angular/projects/ds-rte-lib/src/lib/components/link/link.component.scss
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/link/link.component.scss
@@ -10,7 +10,7 @@
 
     &:visited {
 
-        color: var(--content-link-visited);
+        color: var(--content-link-visited-default);
         text-decoration: underline;
 
         &:hover {
@@ -19,12 +19,12 @@
         }
 
         &:active {
-            color: var(--content-link-visited-press);
+            color: var(--content-link-visited-pressed);
             text-decoration: underline;
         }
 
         &:focus-visible {
-            color: var(--content-link-visited);
+            color: var(--content-link-visited-default);
             text-decoration: underline;
             outline: 1px solid var(--border-brand-focused);
             outline-offset: $radius-s;
@@ -42,7 +42,7 @@
         }
 
         &:active {
-            color: var(--content-link-press);
+            color: var(--content-link-pressed);
             text-decoration: underline;
         }
 
