--- a/packages/core/design-tokens/tokens/themes/_violet-dark.scss
+++ b/packages/core/design-tokens/tokens/themes/_violet-dark.scss
@@ -24,19 +24,13 @@ $violet-dark: (
   "background-brand-inverse-pressed": $violet-600,
   "background-brand-navigation-default": $violet-950,
   "background-brand-navigation-hover": $violet-900,
-  "background-brand-navigation-active": $violet-700,
-  "background-danger-default": $rouge-indications-400,
-  "background-danger-hover": $rouge-indications-300,
-  "background-danger-pressed": $rouge-indications-200,
+  "background-brand-navigation-pressed": $violet-700,
+  "background-danger-default": $rouge-indications-500,
+  "background-danger-hover": $rouge-indications-400,
+  "background-danger-pressed": $rouge-indications-300,
   "background-info-default": $bleu-digital-400,
-  "background-status-info-regular": $bleu-digital-400,
-  "background-status-info-subtle": $bleu-digital-900,
-  "background-status-warning-regular": $jaune-500,
-  "background-status-warning-subtle": $jaune-100,
-  "background-status-success-regular": $vert-digital-400,
-  "background-status-success-subtle": $vert-digital-200,
-  "background-status-alert-regular": $rouge-indications-500,
-  "background-status-alert-subtle": $rouge-indications-900,
+  "background-warning-default": $jaune-500,
+  "background-success-default": $vert-digital-400,
   "border-primary": $greyscale-400,
   "border-secondary": $greyscale-600,
   "border-tertiary": $greyscale-800,
@@ -45,38 +39,41 @@ $violet-dark: (
   "border-inverse": $greyscale-900,
   "border-brand-default": $violet-0,
   "border-brand-focused": $violet-0,
-  "border-navigation-active": $violet-700,
+  "border-brand-navigation-active": $violet-700,
   "border-brand-navigation-divider": $violet-800,
-  "border-danger": $rouge-indications-400,
-  "border-info": $bleu-digital-500,
+  "border-danger": $rouge-indications-500,
+  "border-info": $bleu-digital-400,
   "border-warning": $jaune-indications-400,
-  "border-success": $vert-digital-600,
+  "border-success": $vert-digital-400,
   "content-primary": $core-white,
   "content-secondary": $greyscale-100,
   "content-tertiary": $greyscale-300,
   "content-primary-inverse": $greyscale-900,
   "content-disabled": $greyscale-700,
+  "content-brand-default": $violet-0,
+  "content-brand-hover": $violet-50,
+  "content-brand-pressed": $violet-100,
   "content-brand-navigation-default": $violet-100,
   "content-brand-navigation-hover": $violet-50,
   "content-brand-navigation-disabled": $violet-700,
-  "content-brand-default": $violet-0,
-  "content-brand-hover": $violet-50,
-  "content-brand-press": $violet-100,
   "content-link-default": $bleu-digital-500,
   "content-link-hover": $bleu-digital-400,
-  "content-link-press": $bleu-digital-300,
-  "content-link-visited": $violet-500,
+  "content-link-pressed": $bleu-digital-300,
+  "content-link-visited-default": $violet-500,
   "content-link-visited-hover": $violet-400,
-  "content-link-visited-press": $violet-300,
-  "content-danger": $rouge-indications-400,
-  "content-danger-hover": $rouge-indications-500,
+  "content-link-visited-pressed": $violet-300,
+  "content-danger-default": $rouge-indications-500,
+  "content-danger-hover": $rouge-indications-400,
   "content-danger-inverse": $core-white,
-  "content-success": $vert-digital-400,
+  "content-success-default": $vert-digital-400,
   "content-success-hover": $vert-digital-500,
-  "content-info": $bleu-digital-400,
+  "content-info-default": $bleu-digital-400,
   "content-info-hover": $bleu-digital-500,
   "content-decorative": $greyscale-900,
-  "content-status": $greyscale-900,
+  "brand-navigation-divider": $violet-800,
+  "brand-navigation-divider-2": $violet-800,
+  "brand-navigation-divider-3": $violet-800,
+  "brand-navigation-divider-4": $violet-800,
   "chart-brand": $violet-600,
   "chart-neutral": $greyscale-350,
   "chart-category-1": $bleu-iceberg-500,
@@ -160,6 +157,9 @@ $violet-dark: (
   "elevation-shadow-key": rgba(0, 0, 0, 0.28),
   "elevation-shadow-key-darker": rgba(0, 0, 0, 0.48),
   "elevation-shadow-key-brand": rgba(0, 0, 0, 0.21),
+  "brand-navigation-divider-5": $violet-800,
+  "brand-navigation-divider-6": $violet-800,
+  "brand-navigation-divider-7": $violet-800,
   // TODO remove this color (not a real token)
   "background-brand-hover-opacity-20": $violet-200-opacity-20,
   // TODO remove this color (not a real token)
