--- a/packages/react/src/components/iconButton/IconButton.module.scss
+++ b/packages/react/src/components/iconButton/IconButton.module.scss
@@ -122,7 +122,7 @@
         }
 
         &:active {
-            color: var(--content-brand-press);
+            color: var(--content-brand-pressed);
         }
 
         &:disabled {
