--- a/packages/react/src/components/radioButton/RadioButton.module.scss
+++ b/packages/react/src/components/radioButton/RadioButton.module.scss
@@ -44,15 +44,15 @@
     }
 
     &[data-error='true'] {
-        border: $width-xs solid var(--content-danger);
+        border: $width-xs solid var(--content-danger-default);
         transition: box-shadow 0.3s ease-in-out;
 
         &:checked {
-            border: $width-xs solid var(--content-danger);
+            border: $width-xs solid var(--content-danger-default);
         }
 
         &::before {
-            background: var(--content-danger);
+            background: var(--content-danger-default);
         }
 
         &:hover {
@@ -78,7 +78,7 @@
         }
 
         &[data-error='true'] {
-            border: $width-xs solid var(--content-danger);
+            border: $width-xs solid var(--content-danger-default);
         }
     }
 
