--- a/packages/angular/projects/ds-rte-lib/src/lib/components/icon-button/icon-button.component.scss
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/icon-button/icon-button.component.scss
@@ -126,7 +126,7 @@
         }
 
         &:active {
-            color: var(--content-brand-press);
+            color: var(--content-brand-pressed);
         }
 
         &:disabled {
