--- a/packages/core/design-tokens/tokens/themes/_vert-foret-light.scss
+++ b/packages/core/design-tokens/tokens/themes/_vert-foret-light.scss
@@ -24,19 +24,13 @@ $vert-foret-light: (
   "background-brand-inverse-pressed": $vert-foret-100,
   "background-brand-navigation-default": $vert-foret-950,
   "background-brand-navigation-hover": $vert-foret-900,
-  "background-brand-navigation-active": $vert-foret-700,
+  "background-brand-navigation-pressed": $vert-foret-700,
   "background-danger-default": $rouge-indications-600,
   "background-danger-hover": $rouge-indications-700,
   "background-danger-pressed": $rouge-indications-800,
   "background-info-default": $bleu-digital-600,
-  "background-status-info-regular": $bleu-digital-400,
-  "background-status-info-subtle": $bleu-digital-100,
-  "background-status-warning-regular": $jaune-500,
-  "background-status-warning-subtle": $jaune-100,
-  "background-status-success-regular": $vert-digital-400,
-  "background-status-success-subtle": $vert-digital-200,
-  "background-status-alert-regular": $rouge-indications-500,
-  "background-status-alert-subtle": $rouge-indications-100,
+  "background-warning-default": $jaune-500,
+  "background-success-default": $vert-digital-700,
   "border-primary": $greyscale-600,
   "border-secondary": $greyscale-400,
   "border-tertiary": $greyscale-200,
@@ -45,38 +39,41 @@ $vert-foret-light: (
   "border-inverse": $core-white,
   "border-brand-default": $vert-foret-600,
   "border-brand-focused": $vert-foret-900,
-  "border-navigation-active": $vert-foret-700,
+  "border-brand-navigation-active": $vert-foret-700,
   "border-brand-navigation-divider": $vert-foret-800,
   "border-danger": $rouge-indications-600,
-  "border-info": $bleu-digital-500,
+  "border-info": $bleu-digital-600,
   "border-warning": $jaune-indications-400,
-  "border-success": $vert-digital-600,
+  "border-success": $vert-digital-700,
   "content-primary": $greyscale-900,
   "content-secondary": $greyscale-800,
   "content-tertiary": $greyscale-600,
   "content-primary-inverse": $core-white,
   "content-disabled": $greyscale-200,
+  "content-brand-default": $vert-foret-600,
+  "content-brand-hover": $vert-foret-700,
+  "content-brand-pressed": $vert-foret-800,
   "content-brand-navigation-default": $vert-foret-100,
   "content-brand-navigation-hover": $vert-foret-50,
   "content-brand-navigation-disabled": $vert-foret-700,
-  "content-brand-default": $vert-foret-600,
-  "content-brand-hover": $vert-foret-700,
-  "content-brand-press": $vert-foret-800,
   "content-link-default": $bleu-digital-500,
   "content-link-hover": $bleu-digital-600,
-  "content-link-press": $bleu-digital-700,
-  "content-link-visited": $violet-600,
+  "content-link-pressed": $bleu-digital-700,
+  "content-link-visited-default": $violet-600,
   "content-link-visited-hover": $violet-700,
-  "content-link-visited-press": $violet-800,
-  "content-danger": $rouge-indications-600,
+  "content-link-visited-pressed": $violet-800,
+  "content-danger-default": $rouge-indications-600,
   "content-danger-hover": $rouge-indications-700,
   "content-danger-inverse": $core-white,
-  "content-success": $vert-digital-700,
+  "content-success-default": $vert-digital-700,
   "content-success-hover": $vert-digital-800,
-  "content-info": $bleu-digital-600,
+  "content-info-default": $bleu-digital-600,
   "content-info-hover": $bleu-digital-700,
   "content-decorative": $greyscale-900,
-  "content-status": $greyscale-900,
+  "brand-navigation-divider": $vert-foret-800,
+  "brand-navigation-divider-2": $vert-foret-800,
+  "brand-navigation-divider-3": $vert-foret-800,
+  "brand-navigation-divider-4": $vert-foret-800,
   "chart-brand": $vert-foret-500,
   "chart-neutral": $greyscale-350,
   "chart-category-1": $bleu-iceberg-500,
@@ -160,6 +157,9 @@ $vert-foret-light: (
   "elevation-shadow-key": rgba(0, 0, 0, 0.14),
   "elevation-shadow-key-darker": rgba(0, 0, 0, 0.24),
   "elevation-shadow-key-brand": rgba(0, 0, 0, 0.31),
+  "brand-navigation-divider-5": $vert-foret-800,
+  "brand-navigation-divider-6": $vert-foret-800,
+  "brand-navigation-divider-7": $vert-foret-800,
   // TODO remove this color (not a real token)
   "background-brand-hover-opacity-20": $vert-foret-700-opacity-20,
   // TODO remove this color (not a real token)
