--- a/packages/react/src/components/checkbox/Checkbox.module.scss
+++ b/packages/react/src/components/checkbox/Checkbox.module.scss
@@ -130,13 +130,13 @@
       }
 
       &[data-error='true'] {
-        border: 1px solid var(--content-danger);
+        border: 1px solid var(--content-danger-default);
         background: var(--background-disabled);
       }
     }
 
     &[data-error='true'] {
-      border: 1px solid var(--content-danger);
+      border: 1px solid var(--content-danger-default);
       background: var(--background-default);
 
       &:hover {
@@ -163,7 +163,7 @@
     .checkbox-error {
       @include typography-checkbox-error;
       margin: 0;
-      color: var(--content-danger);
+      color: var(--content-danger-default);
     }
   }
 
