--- a/packages/react/src/components/checkboxGroup/CheckboxGroup.module.scss
+++ b/packages/react/src/components/checkboxGroup/CheckboxGroup.module.scss
@@ -24,7 +24,7 @@
 
     .errorMessage {
       @include typography-text-m-bold;
-      color: var(--content-danger);
+      color: var(--content-danger-default);
       align-self: stretch;
       margin: $positive-spacing_0;
       margin-top: $positive-spacing_050;
@@ -37,7 +37,7 @@
 
       &[data-error='true'] {
         .groupTitle {
-          color: var(--content-danger);
+          color: var(--content-danger-default);
         }
       }
     }
@@ -57,7 +57,7 @@
 
     &[data-error='true'] {
       .groupTitle {
-        color: var(--content-danger);
+        color: var(--content-danger-default);
       }
     }
   }
