--- a/packages/react/src/components/radioButtonGroup/RadioButtonGroup.module.scss
+++ b/packages/react/src/components/radioButtonGroup/RadioButtonGroup.module.scss
@@ -26,7 +26,7 @@
 
         .errorMessage {
             @include typography-text-m-bold;
-            color: var(--content-danger);
+            color: var(--content-danger-default);
             align-self: stretch;
             margin: $positive-spacing_0;
             margin-top: $positive-spacing_050;
@@ -39,7 +39,7 @@
 
             &[data-error='true'] {
                 .groupTitle {
-                    color: var(--content-danger);
+                    color: var(--content-danger-default);
                 }
             }
         }
@@ -59,7 +59,7 @@
 
         &[data-error='true'] {
             .groupTitle {
-                color: var(--content-danger);
+                color: var(--content-danger-default);
             }
         }
 
