--- a/packages/react/src/components/textInput/TextInput.module.scss
+++ b/packages/react/src/components/textInput/TextInput.module.scss
@@ -12,7 +12,7 @@
     &[data-label-position="side"] {
         align-items: center;
         flex-direction: row;
-        
+
         .text {
             width: auto;
             align-items: center;
@@ -28,7 +28,7 @@
             .input {
                 .inputBar {
                     .leftIcon {
-                        color: var(--content-danger);
+                        color: var(--content-danger-default);
                     }
                 }
             }
@@ -62,7 +62,7 @@
             }
 
             .requiredIconContainer {
-                color: var(--content-danger);
+                color: var(--content-danger-default);
                 display: flex;
                 align-items: center;
                 justify-content: center;
@@ -93,6 +93,7 @@
                         padding-left: $positive-spacing-400;
                     }
                 }
+
                 &.withRightIcon {
                     .inputField {
                         padding-right: $positive-spacing-400;
@@ -119,6 +120,7 @@
                     &:focus-visible {
                         outline: 1px solid var(--border-brand-focused);
                         border-radius: $radius-m;
+
                         &::after {
                             display: none;
                         }
@@ -140,11 +142,11 @@
                     color: var(--content-primary);
                     @include neutral-inner-shadow;
 
-                    &:hover{
+                    &:hover {
                         border: $width-xs solid var(--border-primary);
                     }
 
-                    &:focus{
+                    &:focus {
                         outline: 1px solid var(--border-brand-default);
                         border: $width-xs solid var(--border-brand-default)
                     }
@@ -154,14 +156,15 @@
                         border: $width-xs solid var(--border-brand-default)
                     }
 
-                    &:disabled, &[readonly] {
+                    &:disabled,
+                    &[readonly] {
                         outline: 1px solid var(--border-disabled);
-                        border : $width-xs solid var(--border-disabled);
+                        border: $width-xs solid var(--border-disabled);
                         background: linear-gradient(0deg, var(--elevation-surface-inner-shadow) 0%, var(--elevation-surface-inner-shadow) 100%), var(--background-disabled);
                         cursor: not-allowed;
                     }
 
-                    &[data-error='true']{
+                    &[data-error='true'] {
                         outline: 1px solid var(--border-danger);
                         border: $width-xs solid var(--border-danger)
                     }
@@ -178,11 +181,11 @@
             padding: $positive-spacing-050 $positive-spacing-100;
 
             .assistiveIconError {
-                color: var(--content-danger);
+                color: var(--content-danger-default);
             }
 
             .assistiveIconSuccess {
-                color: var(--content-success);
+                color: var(--content-success-default);
             }
 
             .assistiveLabel {
@@ -190,13 +193,13 @@
                 transition: color 200ms;
 
                 &[data-appearance="error"] {
-                    color: var(--content-danger);
+                    color: var(--content-danger-default);
                     @include typography-text-input-s-bold;
                     margin: $positive-spacing-0;
                 }
 
                 &[data-appearance="success"] {
-                    color: var(--content-success);
+                    color: var(--content-success-default);
                     @include typography-text-input-s-bold;
                     margin: $positive-spacing-0;
                 }
