--- a/angular/components/icon-button/icon-button.component.scss
+++ b/angular/components/icon-button/icon-button.component.scss
@@ -126,7 +126,7 @@
         }
 
         &:active {
-            color: var(--content-brand-press);
+            color: var(--content-brand-pressed);
         }
 
         &:disabled {
