--- a/packages/angular/projects/ds-rte-lib/src/lib/components/tag/tag.component.scss
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/tag/tag.component.scss
@@ -27,11 +27,19 @@
 
     &[data-tag-type="status"] {
 
+        &[data-status="success"],
+        &[data-status="information"],
+        &[data-status="alert"] {
+            .tag-label {
+                color: var(--content-primary-inverse);
+            }
+        }
+
         $status-colors: (
             success: --background-success-default,
-            information: --background-status-info-regular,
+            information: --background-info-default,
             warning: --background-warning-default,
-            alert: --background-status-alert-regular
+            alert: --background-danger-default
         );
 
     @each $name, $var in $status-colors {
