fix (side navigation): correct Divider & NavItem display

--- a/packages/react/src/components/divider/Divider.module.scss
+++ b/packages/react/src/components/divider/Divider.module.scss
@@ -29,6 +29,10 @@
     &[data-appearance='brand'] {
         border-top-color: var(--border-brand-default);
     }
+
+    &[data-appearance='brand-navigation'] {
+        border-top-color: var(--border-brand-navigation-divider);
+    }
 }
 
 .vertical {
