--- a/packages/react/src/components/sideNav/SideNav.module.scss
+++ b/packages/react/src/components/sideNav/SideNav.module.scss
@@ -23,10 +23,7 @@
     border-radius: 0;
     transition: min-width 300ms;
     position: relative;
-
-    &.neutral {
-        background-color: red;
-    }
+    border-right: 1px solid var(--border-brand-navigation-divider);
 }
 
 .sideNavHeaderContainer {
@@ -195,6 +192,9 @@
         margin: 0;
         width: 100%;
         box-sizing: border-box;
+        display: flex;
+        flex-direction: column;
+        gap: $positive-spacing_100;
     }
 }
 
