--- a/packages/react/src/components/sideNav/navItem/NavItem.module.scss
+++ b/packages/react/src/components/sideNav/navItem/NavItem.module.scss
@@ -73,8 +73,11 @@
     }
 
     &.nested {
+        @include typography-button-s;
+        
         border-radius: 0 $radius-s $radius-s 0;
         border-left: $width-xs solid var(--border-brand-navigation-divider);
+        padding: $positive-spacing_050 $positive-spacing_100;
 
         &:active, &.active {
             @include neutral-inner-shadow;
