feat (side navigation): add Divider support for navItems & navMenus

--- a/packages/react/src/components/sideNav/navItem/NavItem.module.scss
+++ b/packages/react/src/components/sideNav/navItem/NavItem.module.scss
@@ -94,9 +94,11 @@
     &.collapsed {
         padding: $positive-spacing_100 $positive-spacing_150;
         justify-content: center;
+        border-left: none;
 
         .navItem {
             justify-content: center;
+            gap: 0;
         }
     }
 
