feat (design docs): add guideline page

--- a/packages/react/.storybook/template/Overview/Availability/Availability.scss
+++ b/packages/react/.storybook/template/Overview/Availability/Availability.scss
@@ -2,7 +2,7 @@
 
 .sbdocs {
 
-  .table-wrapper {
+  .availability.table-wrapper {
     border: 1px solid var(--border-tertiary);
     border-radius: 8px;
     overflow: clip;
