--- a/packages/react/.storybook/template/TabOfOptions/TabOfOptions.scss
+++ b/packages/react/.storybook/template/TabOfOptions/TabOfOptions.scss
@@ -1,7 +1,7 @@
 @use '@design-system-rte/core/design-tokens/main-internal.scss' as *;
 
 .sbdocs {
-  table.rte-stories-table {
+  table.rte-stories-table-options {
     margin: 0;
     width: 100%;
     border-collapse: separate;
