--- a/packages/react/src/components/banner/Banner.module.scss
+++ b/packages/react/src/components/banner/Banner.module.scss
@@ -1,17 +1,18 @@
 @use '@design-system-rte/core/design-tokens/main-internal.scss' as *;
 
-.banner-container {
+.banner {
+  @include elevation-neutral-shadow-4;
+  display: flex;
+  padding: $positive-spacing_200;
+  gap: $positive-spacing_200;
+  align-self: stretch;
+  border-radius: $radius-s;
   display: flex;
   box-sizing: border-box;
   width: 100%;
   min-width: 320px;
-  padding: $positive-spacing_300;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: $positive-spacing_0;
-  border-radius: $radius-none;
-  background: var(--background-info-default);
   color: var(--content-info-default);
   top: 0;
   left: 0;
@@ -19,10 +20,22 @@
   transform: translateY(-10px);
   transition: opacity 200ms ease, transform 200ms ease;
   z-index: $level-1;
+  border-bottom: $width-l solid var(--border-info);
+  background-color: var(--background-default);
 
-  &[data-type='alert'] {
-    background: var(--background-danger-default);
+  &[data-type='error'] {
     color: var(--content-danger-default);
+    border-bottom-color: var(--border-danger);
+  }
+
+  &[data-type='success'] {
+    color: var(--content-success-default);
+    border-bottom-color: var(--border-success);
+  }
+
+  &[data-type='warning'] {
+    color: var(--content-primary);
+    border-bottom-color: var(--border-warning);
   }
 
   &[data-position='overlay'] {
@@ -34,59 +47,46 @@
     transform: translateY(0);
   }
 
-  .banner {
+  .banner-icon {
     display: flex;
-    padding: $positive-spacing_200;
-    align-items: flex-start;
-    gap: $positive-spacing_200;
+    padding: $positive-spacing_0 $positive-spacing_0 $positive-spacing_0 $positive-spacing_200;
+    justify-content: center;
+    align-items: center;
+    gap: var(--positive-spacing_0, 0);
     align-self: stretch;
-    border-radius: var(--radius-S, 4px);
-    opacity: var(--100, 1);
-    @include elevation-neutral-shadow-4;
+  }
 
-    background-color: var(--background-default, #FFF);
+  .banner-close-icon {
+    color: var(--content-secondary);
+  }
 
-    .banner-icon {
-      display: flex;
-      padding: $positive-spacing_0 $positive-spacing_0 $positive-spacing_0 $positive-spacing_200;
-      justify-content: center;
-      align-items: center;
-      gap: var(--positive-spacing_0, 0);
-      align-self: stretch;
+  .banner-content {
+    display: flex;
+    padding: $positive-spacing_0 $positive-spacing_200;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: $positive-spacing_100;
+    flex: 1 0 0;
+    border-radius: $radius-none;
+    opacity: $opacity-100;
+
+    .banner-title {
+      @include typography-heading-s;
     }
 
-    .banner-close-icon {
+    .banner-action-button {
+      width: max-content;
+    }
+
+    .banner-message {
+      @include typography-text-m;
       color: var(--content-secondary);
-    }
-
-    .banner-content {
       display: flex;
-      padding: $positive-spacing_0 $positive-spacing_200;
-      flex-direction: column;
-      align-items: flex-start;
-      gap: $positive-spacing_100;
-      flex: 1 0 0;
-      border-radius: $radius-none;
-      opacity: $opacity-100;
-
-      .banner-title {
-        @include typography-heading-s;
-      }
-
-      .banner-message {
-        @include typography-text-s;
-        color: var(--content-secondary);
-        display: flex;
-        align-items: center;
-        gap: $positive-spacing_300;
-        padding: $positive-spacing_100 0;
-        justify-content: space-between;
-        width: 100%;
-
-        .banner-action-button {
-          width: max-content;
-        }
-      }
+      align-items: center;
+      gap: $positive-spacing_300;
+      padding: $positive-spacing_100 0;
+      justify-content: space-between;
+      width: 100%;
     }
   }
 }
