fix (side navigation): correct key assignation for iteration of NavItems

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/side-nav/base-side-nav/base-side-nav.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/side-nav/base-side-nav/base-side-nav.component.html
@@ -16,7 +16,7 @@
       </div>
     }
   </nav>
-  <div class="side-nav-content">
+  <div #contentRef class="side-nav-content">
     <ng-content select="[side-nav-content]"></ng-content>
   </div>
 </div>
