--- a/packages/angular/projects/ds-rte-lib/src/lib/components/side-nav/side-nav.component.scss
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/side-nav/side-nav.component.scss
@@ -166,6 +166,9 @@
         margin: 0;
         width: 100%;
         box-sizing: border-box;
+        display: flex;
+        flex-direction: column;
+        gap: $positive-spacing_100;
     }
 }
 
@@ -180,6 +183,24 @@
         box-sizing: border-box;
         width: 100%;
         margin-top: $positive-spacing_050;
+    }
+}
+
+.side-nav-footer-items {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: $positive-spacing_100;
+    width: 100%;
+    box-sizing: border-box;
+    margin-bottom: $positive-spacing_100;
+
+    ul {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        width: 100%;
+        box-sizing: border-box;
     }
 }
 
