--- a/packages/react/src/components/sideNav/baseSideNav/BaseSideNav.module.scss
+++ b/packages/react/src/components/sideNav/baseSideNav/BaseSideNav.module.scss
@@ -1,4 +1,4 @@
-@use '@design-system-rte/core/design-tokens/main.scss' as *;
+@use '@design-system-rte/core/design-tokens/main-internal.scss' as *;
 
 .sideNavContainer {
   height: auto;
@@ -31,7 +31,7 @@
 
   max-height: var(--content-height);
 
-  &.neutral {
+  &[data-appearance='neutral'] {
     background-color: var(--background-neutral-navigation-default);
     color: var(--content-secondary);
   }
