--- a/packages/react/src/components/sideNav/navItem/NavItem.module.scss
+++ b/packages/react/src/components/sideNav/navItem/NavItem.module.scss
@@ -1,4 +1,4 @@
-@use '@design-system-rte/core/design-tokens/main.scss' as *;
+@use '@design-system-rte/core/design-tokens/main-internal.scss' as *;
 
 .navItemContainer {
     @include typography-button-m;
@@ -15,22 +15,22 @@
     border-left: $width-s solid transparent;
     color: var(--content-brand-navigation-default);
 
-    &.neutral {
+    &[data-appearance='neutral'] {
         color: var(--content-secondary);
         &:hover {
             background: var(--background-neutral-navigation-hover);
             color: var(--content-primary);
         }
 
-        &.active {
+        &[data-active='true'] {
             @include elevation-neutral-inner-shadow;
             color: var(--content-brand-pressed);
         }
 
-        &.nested {
+        &[data-nested='true'] {
             border-radius: 0 $radius-s $radius-s 0;
             border-left: $width-xs solid var(--border-divider);
-            &.active {
+            &[data-active='true'] {
                 border-left: $width-xs solid var(--border-brand-navigation-active);
             }
         }
@@ -41,7 +41,7 @@
         color: var(--content-brand-navigation-hover);
     }
 
-    &.active {
+    &[data-active='true'] {
         background: var(--background-brand-navigation-pressed);
         border-left: $width-s solid var(--border-brand-navigation-divider);
         color: var(--content-primary-inverse);
@@ -86,12 +86,12 @@
         }
     }
 
-    &.focused {
+    &[data-focused='true'] {
         outline: 1px solid var(--border-brand-focused);
         outline-offset: 0;
     }
 
-    &.collapsed {
+    &[data-collapsed='true'] {
         padding: $positive-spacing_100 $positive-spacing_150;
         justify-content: center;
         border-left: none;
@@ -102,14 +102,14 @@
         }
     }
 
-    &.nested {
+    &[data-nested='true'] {
         @include typography-button-s;
         
         border-radius: 0 $radius-s $radius-s 0;
         border-left: $width-xs solid var(--border-brand-navigation-divider);
         padding: $positive-spacing_050 $positive-spacing_100;
 
-        &.active {
+        &[data-active='true'] {
             @include neutral-inner-shadow;
         }
     }
