--- a/packages/angular/projects/ds-rte-lib/src/lib/components/button/button.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/button/button.component.html
@@ -1,3 +1,4 @@
 <span class="rte-button-label">
-    <ng-content/>
+  <ng-content />
+  <!-- Le badge est géré par BadgeDirective attachée via hostDirectives -->
 </span>
