fix (tooltip): correct label display width to show all its content

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/side-nav/nav-item/nav-item.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/side-nav/nav-item/nav-item.component.html
@@ -8,6 +8,7 @@
     [attr.role]="role()"
     [rteTooltip]="label()"
     [rteTooltipArrow]="false"
+    [rteTooltipGap]="12"
     [rteTooltipShouldFocusTrigger]="false">
     <ng-container [ngTemplateOutlet]="contentTemplate"></ng-container>
   </div>
